[metadata]
name=jupyter_helpers
version=0.1.10
license=MIT
description=
project_urls=
    Homepage=https://github.com/vmstarchenko/jupyter_helpers
long_description=file: README.md
long_description_content_type=text/markdown
url=https://github.com/vmstarchenko/jupyter_helpers
keywords=
platform=any
classifiers=
    Development Status :: 3 - Alpha

[options]
setup_requires=setuptools>=42
install_requires=
    scrapy
packages=jupyter_helpers
zip_safe=false

[check]
metadata=true
